[gd_scene load_steps=5 format=3 uid="uid://clhqm5e8o3c63"]

[ext_resource type="PackedScene" uid="uid://boxpprwbm1mu8" path="res://input.tscn" id="1_28x8n"]
[ext_resource type="Script" path="res://2016/day1/day_1.gd" id="1_ongx5"]
[ext_resource type="PackedScene" uid="uid://gvtsfjdfxf5j" path="res://2016/day1/city_grid.tscn" id="3_3su5r"]
[ext_resource type="PackedScene" uid="uid://44x2pvpcrj7d" path="res://2016/day1/location_point.tscn" id="4_8gyu6"]

[node name="Day1" type="CanvasLayer"]
script = ExtResource("1_ongx5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Input" parent="." instance=ExtResource("1_28x8n")]
day = 1

[node name="CityGrid" parent="." instance=ExtResource("3_3su5r")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Line2D" type="Line2D" parent="CityGrid"]
width = 2.0
default_color = Color(0.741176, 0.286275, 0.0509804, 1)

[node name="Part2Highlight" type="Line2D" parent="CityGrid"]
visible = false
width = 2.0
default_color = Color(0.313726, 0.67451, 0, 1)

[node name="Part1Point" parent="CityGrid" instance=ExtResource("4_8gyu6")]
visible = false
position = Vector2(30, 30)

[node name="Part2Point" parent="CityGrid" instance=ExtResource("4_8gyu6")]
visible = false
position = Vector2(30, 30)

[node name="DayLabel" type="Label" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 147.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 36
text = "Day 1"

[node name="Part1Label" type="Label" parent="."]
offset_left = 25.0
offset_top = 75.0
offset_right = 147.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 36
text = "Part 1: "

[node name="Part2Label" type="Label" parent="."]
offset_left = 25.0
offset_top = 125.0
offset_right = 147.0
offset_bottom = 175.0
theme_override_font_sizes/font_size = 36
text = "Part 2: "

[connection signal="available" from="Input" to="." method="_on_input_available"]
